--- a/.github/workflows/notebook-qa.yml
+++ b/.github/workflows/notebook-qa.yml
@@ -117,7 +117,7 @@ jobs:
           python .tmp/${{ github.run_id }}-qa-tools/process-notebooks/checkers/figure_checker.py \
             ${{ needs.collect.outputs.notebooks }}
 
-      # Metadata check (inline)
+      # Metadata version check
       - name: (1.2.6) Check version metadata
         id: metadata_checker
         if: success() || failure()
@@ -138,46 +138,13 @@ jobs:
             echo "⚠️ No version date found in notebooks or README"
           fi
 
-      # Accessibility check (inline)
+      # Accessibility check
       - name: (3.1.3) Check accessibility - alt text
         id: accessibility_checker
         if: success() || failure()
         run: |
-          python << 'EOF'
-          import json
-          import sys
-          import re
-
-          notebooks = "${{ needs.collect.outputs.notebooks }}".split()
-          issues = []
-
-          for nb_path in notebooks:
-              if not nb_path.strip():
-                  continue
-              try:
-                  with open(nb_path) as f:
-                      nb = json.load(f)
-                  for i, cell in enumerate(nb.get('cells', [])):
-                      if cell.get('cell_type') == 'markdown':
-                          src = ''.join(cell.get('source', []))
-                          # Check for images without alt text: ![]( pattern
-                          if re.search(r'!\[\]\(', src):
-                              issues.append(f"{nb_path}: cell {i} has image without alt text")
-                          # Check HTML img tags without alt
-                          if re.search(r'<img[^>]*(?<!alt=")[^>]*>', src, re.IGNORECASE):
-                              if not re.search(r'<img[^>]*alt\s*=', src, re.IGNORECASE):
-                                  issues.append(f"{nb_path}: cell {i} has HTML img without alt attribute")
-              except Exception as e:
-                  print(f"Warning: Could not check {nb_path}: {e}")
-
-          if issues:
-              print("❌ Accessibility issues found:")
-              for issue in issues:
-                  print(f"  - {issue}")
-              sys.exit(1)
-          else:
-              print("✅ All images have alt text")
-          EOF
+          python .tmp/${{ github.run_id }}-qa-tools/process-notebooks/checkers/accessibility_checker.py \
+            ${{ needs.collect.outputs.notebooks }}
 
       # File existence checks
       - name: (1.2.4) Check LICENSE
