--- a/.github/workflows/notebook-qa.yml
+++ b/.github/workflows/notebook-qa.yml
@@ -148,12 +148,12 @@ jobs:
             ${{ needs.collect.outputs.notebooks }}
 
       # Accessibility check
-      - name: (3.1.3) Check accessibility - alt text
+      - name: (3.1.3) Check accessibility
         id: accessibility_checker
         if: success() || failure()
-        run: |
-          python .tmp/${{ github.run_id }}-qa-tools/process-notebooks/checkers/accessibility_checker.py \
-            ${{ needs.collect.outputs.notebooks }}
+        uses: berkeley-dsep-infra/jupyterlab-a11y-checker@c77482165508460d671cdad6ecdff5ac72ab6063
+        with:
+          files: ${{ needs.collect.outputs.notebooks }}
 
       # File existence checks
       - name: (1.2.4) Check LICENSE
